# QuickCN

./: CMakeLists.txt  README.md
components/: CMakeLists.txt
components/Button/: CMakeLists.txt  CNButton.qml
lib/: CMakeLists.txt  color.h  config.cpp  config.h  dark-theme.cpp  dark-theme.h  theme.cpp  theme.h  util.cpp  util.h
src/: Demo.qml  main.cpp
