file(GLOB COMPONENT_DIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)

foreach(COMPONENT_DIR ${COMPONENT_DIRS})
  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${COMPONENT_DIR})
    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${COMPONENT_DIR}/CMakeLists.txt)
      add_subdirectory(${COMPONENT_DIR})
      list(APPEND QUICKCN_COMPONENT_TARGETS ${PROJECT_NAME}_component_${COMPONENT_DIR})
    endif()
  endif()
endforeach()

set(QUICKCN_COMPONENT_TARGETS ${QUICKCN_COMPONENT_TARGETS} PARENT_SCOPE)
